properly added travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: c
-
 os: linux
-
-script: make test
-
-sudo: required
-
-install: make dep
+compiler:
+  - gcc
+install: sudo apt-get install check
+script: make && make test
